--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+server:
+  servlet:
+    context-path: /starB2W
+    
+spring:
+  data:    mongodb:
+      uri: mongodb://localhost:27017/starB2W
+  main:    allow-bean-definition-overriding: true
+  autoconfigure:
+    exclude:    - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration    
