--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>spring-mock-mvc</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.4.2.Final</version>
@@ -66,6 +71,7 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 
 		<!-- swagger -->
 		<dependency>
@@ -131,7 +137,7 @@
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
-			</plugin> 
+			</plugin>
 		</plugins>
 	</build>
 
