--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+        <dependency>
+            <groupId>com.github.cloudyrock.mongock</groupId>
+            <artifactId>mongock-spring</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
 		<!-- swagger -->
 		<dependency>
