--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,34 @@
-version: '3.1'
+version: '3.3'
 services:
-
-  mongo:
-    container_name: mongo
-    image: mongo
-    expose:
-     - 27017
-    ports:
-     - "27017:27017"
   starb2w:    
-    build: .
+    build:
+      dockerfile: ./Dockerfile
+      context: .
     environment:
      - SPRING_DATA_MONGODB_URI=mongodb://mongo:27017/starB2W
-
-    
     ports:
-     - "8080:8080"
-    links:
-    - mongo
+     - 8080:8080
+    networks: 
+     - java-mongo-network
     depends_on:
-    - mongo
+     - mongodb
+    
+  mongodb:
+    container_name: mongo
+    image: mongo
+    ports:
+     - 27017:27017
+    volumes:
+        - my-mongo-volume:/data/db
+    networks: 
+     - java-mongo-network
+  
+volumes:
+  my-mongo-volume:
+    
+       
+networks: 
+  java-mongo-network:
+    driver: bridge
 
 
