--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
 version: '3.3'
 services:
+  mongodb:
+    container_name: mongo
+    image: mongo
+    ports:
+     - 27017:27017
+    volumes:
+        - my-mongo-volume:/data/db
+    networks: 
+     - java-mongo-network
+      
+  mongo-express:
+    image: mongo-express
+    ports:
+      - 8081:8081
+    links:
+      - mongodb
+    networks:
+      - java-mongo-network
+
   starb2w:    
     build:
       dockerfile: ./Dockerfile
@@ -12,16 +31,6 @@ services:
      - java-mongo-network
     depends_on:
      - mongodb
-    
-  mongodb:
-    container_name: mongo
-    image: mongo
-    ports:
-     - 27017:27017
-    volumes:
-        - my-mongo-volume:/data/db
-    networks: 
-     - java-mongo-network
   
 volumes:
   my-mongo-volume:
